moving pygame init out to pygame_system_context

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -33,70 +42,8 @@
     "from typing import NamedTuple, Tuple, List, Callable, Optional, TypeVar, Type, Dict, Any\n",
     "from collections import defaultdict\n",
     "\n",
-    "\n",
-    "class SystemContext(NamedTuple):\n",
-    "    screen: pygame.Surface\n",
-    "    clock: pygame.time.Clock\n",
-    "\n",
-    "\n",
-    "# System Context will be init on awake\n",
-    "class RenderContext(NamedTuple):\n",
-    "    WIDTH: int\n",
-    "    HEIGHT: int\n",
-    "    BACKGROUND_COLOR: tuple\n",
-    "    FPS: int\n",
-    "\n",
-    "\n",
-    "class AssetContext(NamedTuple):\n",
-    "    ASSET_FOLDER_PATH: str\n",
-    "\n",
-    "\n",
-    "# Statically define CONTEXT CONSTANTS\n",
-    "RENDER_CONTEXT = RenderContext(\n",
-    "    640,  # RESOLUTION_WIDTH\n",
-    "    480,  # RESOLUTION_HEIGHT\n",
-    "    (64, 64, 0),  # BACKGROUND_COLOR\n",
-    "    30,  # FPS\n",
-    ")\n",
-    "\n",
-    "ASSET_CONTEXT = AssetContext(ASSET_FOLDER_PATH=os.path.join(\"assets\", \"images\"))\n",
-    "\n",
-    "\n",
-    "def on_awake() -> SystemContext:\n",
-    "    \"\"\"\n",
-    "    Initialize pygame\n",
-    "    - SYS_SCREEN\n",
-    "    - SYS_CLOCK\n",
-    "    \"\"\"\n",
-    "    # Initialize pygame\n",
-    "    pygame.init()\n",
-    "    # Initialize the screen\n",
-    "    screen = pygame.display.set_mode(\n",
-    "        # @audit-ok 💨 : Use `HWSURFACE` and `DOUBLEBUF` for better performance\n",
-    "        (RENDER_CONTEXT.WIDTH, RENDER_CONTEXT.HEIGHT),\n",
-    "        pygame.HWSURFACE | pygame.DOUBLEBUF,\n",
-    "    )\n",
-    "    # Initialize the clock\n",
-    "    # @audit-ok 💨 : Cap the frame rate else loop will run at system allows and\n",
-    "    # # will lead to :\n",
-    "    # - high CPU usage\n",
-    "    # - inconsistent performance across different devices.\n",
-    "    clock = pygame.time.Clock()\n",
-    "\n",
-    "    # Set the title and icon (optional)\n",
-    "    pygame.display.set_caption(\"Asteroids_ECS_Edition\")\n",
-    "    icon = pygame.image.load(\n",
-    "        os.path.join(ASSET_CONTEXT.ASSET_FOLDER_PATH, \"app_icon.jpg\")\n",
-    "    ).convert_alpha()\n",
-    "    pygame.display.set_icon(icon)\n",
-    "\n",
-    "    return SystemContext(screen, clock)\n",
-    "\n",
-    "\n",
-    "def on_exit() -> None:\n",
-    "    \"\"\"Handle exit event\"\"\"\n",
-    "    pygame.quit()\n",
-    "    sys.exit()\n"
+    "# imports context from library.system_context module\n",
+    "from library.pygame_system_context import PygameSystemContext as context"
    ]
   },
   {
@@ -111,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +361,10 @@
     "    ship_input = Input()\n",
     "    ship_transform = Transform()\n",
     "    ship_position = Position(\n",
-    "        Vector2(int(RENDER_CONTEXT.WIDTH * 0.5), int(RENDER_CONTEXT.HEIGHT * 0.5))\n",
+    "        Vector2(\n",
+    "            int(context.RENDER.WIDTH * 0.5),\n",
+    "            int(context.RENDER.HEIGHT * 0.5),\n",
+    "        )\n",
     "    )\n",
     "    ship_rotation = Rotation(0)\n",
     "    ship_velocity = Velocity(0, 0, 0)\n",
@@ -444,8 +394,8 @@
     "    asteroid_transform = Transform()\n",
     "    asteroid_position = Position(\n",
     "        Vector2(\n",
-    "            random.randint(0, RENDER_CONTEXT.WIDTH),\n",
-    "            random.randint(0, RENDER_CONTEXT.HEIGHT),\n",
+    "            random.randint(0, context.RENDER.WIDTH),\n",
+    "            random.randint(0, context.RENDER.HEIGHT),\n",
     "        )\n",
     "    )\n",
     "    asteroid_rotation = Rotation(random.randint(0, 359))\n",
@@ -487,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +586,7 @@
     "    def _screen_wrap(position: Vector2) -> Vector2:\n",
     "        \"\"\"Wrap a position to the screen\"\"\"\n",
     "        return Vector2(\n",
-    "            position.x % RENDER_CONTEXT.WIDTH, position.y % RENDER_CONTEXT.HEIGHT\n",
+    "            position.x % context.RENDER.WIDTH, position.y % context.RENDER.HEIGHT\n",
     "        )\n",
     "\n",
     "    @staticmethod\n",
@@ -704,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,8 +787,8 @@
     "\n",
     "    def update(self, **kwargs) -> None:\n",
     "        super().update(**kwargs)\n",
-    "        self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
-    "        self.clock.tick(RENDER_CONTEXT.FPS)\n"
+    "        self.screen.fill(context.RENDER.BACKGROUND_COLOR)\n",
+    "        self.clock.tick(context.RENDER.FPS)\n"
    ]
   },
   {
@@ -860,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,10 +849,10 @@
     ") -> bool:\n",
     "    for event in frame_events:\n",
     "        if event.type == pygame.QUIT:\n",
-    "            on_exit()\n",
+    "            context.on_exit()\n",
     "        elif event.type == pygame.KEYUP:\n",
     "            if event.key == pygame.K_ESCAPE:\n",
-    "                on_exit()\n",
+    "                context.on_exit()\n",
     "            elif event.key == pygame.K_SPACE:\n",
     "                is_super_hot = not is_super_hot\n",
     "            elif event.key == pygame.K_j:\n",
@@ -933,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -944,69 +894,14 @@
       "[entities] on_init gathering system cache for PositioningSystem\n",
       "[entities] on_init gathering system cache for RotationalSystem\n",
       "[entities] on_init gathering system cache for AnimateAsteroidsSystem\n",
-      "[entities] on_init gathering system cache for ShapeDrawSystem\n",
-      "Deleting Asteroid <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid>\n",
-      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for InputSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=25cfb009-01b5-461b-942d-b049a08ccce6 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
-      "Deleting Asteroid <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid>\n",
-      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for InputSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=a4e1c39c-135f-47bf-bfe0-4d42edd6005e name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
-      "Deleting Asteroid <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid>\n",
-      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for InputSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=c428a81d-e2c1-4650-b2a5-689076d9a720 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
-      "Deleting Asteroid <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid>\n",
-      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for InputSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=22dc0c1d-649e-46cf-896a-18d3358a7b35 name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n",
-      "Deleting Asteroid <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid>\n",
-      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for InputSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for PositioningSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for RotationalSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for AnimateAsteroidsSystem\n",
-      "e[entities] on_remove_component_dirty <Entity id=b27804ad-c1c7-433c-b9ea-ed7ffc2eb6cf name=asteroid> <class '__main__.Shape'>\n",
-      "[entities] on_dirty regathering sytem cache for ShapeDrawSystem\n"
+      "[entities] on_init gathering system cache for ShapeDrawSystem\n"
      ]
     }
    ],
    "source": [
     "def main() -> None:\n",
     "    # [INIT] - systems, context and COMPONENT managers\n",
-    "    context_sys = on_awake()\n",
+    "    context_sys = context.on_awake()\n",
     "    event_manager = PubSubEventManager()\n",
     "    c_manager = ComponentManager(event_manager)\n",
     "\n",
@@ -1108,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
