code review addresssed system context

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -362,8 +362,8 @@
     "    ship_transform = Transform()\n",
     "    ship_position = Position(\n",
     "        Vector2(\n",
-    "            int(context.RENDER.WIDTH * 0.5),\n",
-    "            int(context.RENDER.HEIGHT * 0.5),\n",
+    "            int(context.CONFIG.WIDTH * 0.5),\n",
+    "            int(context.CONFIG.HEIGHT * 0.5),\n",
     "        )\n",
     "    )\n",
     "    ship_rotation = Rotation(0)\n",
@@ -394,8 +394,8 @@
     "    asteroid_transform = Transform()\n",
     "    asteroid_position = Position(\n",
     "        Vector2(\n",
-    "            random.randint(0, context.RENDER.WIDTH),\n",
-    "            random.randint(0, context.RENDER.HEIGHT),\n",
+    "            random.randint(0, context.CONFIG.WIDTH),\n",
+    "            random.randint(0, context.CONFIG.HEIGHT),\n",
     "        )\n",
     "    )\n",
     "    asteroid_rotation = Rotation(random.randint(0, 359))\n",
@@ -586,7 +586,7 @@
     "    def _screen_wrap(position: Vector2) -> Vector2:\n",
     "        \"\"\"Wrap a position to the screen\"\"\"\n",
     "        return Vector2(\n",
-    "            position.x % context.RENDER.WIDTH, position.y % context.RENDER.HEIGHT\n",
+    "            position.x % context.CONFIG.WIDTH, position.y % context.CONFIG.HEIGHT\n",
     "        )\n",
     "\n",
     "    @staticmethod\n",
@@ -787,8 +787,8 @@
     "\n",
     "    def update(self, **kwargs) -> None:\n",
     "        super().update(**kwargs)\n",
-    "        self.screen.fill(context.RENDER.BACKGROUND_COLOR)\n",
-    "        self.clock.tick(context.RENDER.FPS)\n"
+    "        self.screen.fill(context.CONFIG.BACKGROUND_COLOR)\n",
+    "        self.clock.tick(context.CONFIG.FPS)\n"
    ]
   },
   {
