vector2 transform to module, also O_Factory class

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -34,13 +34,10 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
     "import pygame\n",
     "from pygame.event import Event\n",
     "from pygame.math import Vector2\n",
-    "from typing import NamedTuple, Tuple, List, Callable, Optional, TypeVar, Type, Dict, Any\n",
-    "from collections import defaultdict\n",
+    "from typing import Tuple, List, Callable, Optional, Type\n",
     "\n",
     "# imports context from library.system_context module\n",
     "from library.pygame_system_context import PygameSystemContext as context"
@@ -249,33 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "from pygame.math import Vector2\n",
-    "\n",
-    "class Vector2Transform:\n",
-    "    \"\"\"\n",
-    "    Helper class for performing 2D vector transformations\n",
-    "    \"\"\"\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def rotate_vector(vector: Vector2, radian_angle: float) -> Vector2:\n",
-    "        \"\"\"Rotate a vector by a given radian angle, center is assumed to be (0,0)\"\"\"\n",
-    "        return vector.rotate_rad(radian_angle)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def angle_from_vector(vector: Vector2) -> float:\n",
-    "        \"\"\"Get the angle of a vector in radians\"\"\"\n",
-    "        return math.atan2(vector.y, vector.x)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def rotate_vectors(points: List[Vector2], angle: float) -> List[Vector2]:\n",
-    "        \"\"\"Rotate a list of points by a given angle, center is assumed to be (0,0)\"\"\"\n",
-    "        angle_rad = math.radians(angle)\n",
-    "        rotated_points: List[Vector2] = []\n",
-    "        for point in points:\n",
-    "            rotated_vector = Vector2Transform.rotate_vector(point, angle_rad)\n",
-    "            rotated_points.append(rotated_vector)\n",
-    "        return rotated_points\n"
+    "from library.vector2transform import Vector2Transform"
    ]
   },
   {
@@ -345,85 +316,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SHIP_HEALTH = 1\n",
-    "SHIP_SIZE = 30\n",
-    "ASTEROID_HEALTH = 100\n",
-    "ASTEROID_SIZE = 100\n",
-    "ASTEROID_VERTICES = 10\n",
-    "ASTEROID_MAX_SPEED_POSITION = 2\n",
-    "ASTEROID_MAX_SPEED_ROTATION = 2\n",
+    "from typing import NamedTuple\n",
     "\n",
     "\n",
-    "def spawn_ship(component_manager: ComponentManager) -> None:\n",
-    "    \"spawn a ship at the center of the screen\"\n",
-    "    ship = Entity(name=\"ship\")\n",
-    "    ship_game_object = Player()\n",
-    "    ship_input = Input()\n",
-    "    ship_transform = Transform()\n",
-    "    ship_position = Position(\n",
-    "        Vector2(\n",
-    "            int(context.CONFIG.WIDTH * 0.5),\n",
-    "            int(context.CONFIG.HEIGHT * 0.5),\n",
+    "class ShipConfig(NamedTuple):\n",
+    "    HEALTH = 1\n",
+    "    SIZE = 30\n",
+    "\n",
+    "\n",
+    "class AsteroidConfig(NamedTuple):\n",
+    "    HEALTH = 1\n",
+    "    SIZE = 100\n",
+    "    VERTICES = 10\n",
+    "    K_POSITION = 2  # change in position per tick\n",
+    "    K_ROTATION = 2  # change in rotation per tick\n",
+    "\n",
+    "\n",
+    "class O_Type:\n",
+    "    \"\"\" \n",
+    "    Object Configurations for all game objects to be spawned \n",
+    "    \"\"\"\n",
+    "    SHIP = ShipConfig()\n",
+    "    ASTEROID = AsteroidConfig()\n",
+    "\n",
+    "\n",
+    "class O_Factory:\n",
+    "    \"\"\"\n",
+    "    Object Factory to instance and spawn game objects\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def spawn_ship(component_manager: ComponentManager) -> None:\n",
+    "        \"spawn a ship at the center of the screen\"\n",
+    "        ship = Entity(name=\"ship\")\n",
+    "        ship_game_object = Player()\n",
+    "        ship_input = Input()\n",
+    "        ship_transform = Transform()\n",
+    "        ship_position = Position(\n",
+    "            Vector2(\n",
+    "                int(context.CONFIG.WIDTH * 0.5),\n",
+    "                int(context.CONFIG.HEIGHT * 0.5),\n",
+    "            )\n",
     "        )\n",
-    "    )\n",
-    "    ship_rotation = Rotation(0)\n",
-    "    ship_velocity = Velocity(0, 0, 0)\n",
-    "    ship_health = Health(SHIP_HEALTH)\n",
-    "    ship_points = VertexAsset.generate_ship(SHIP_SIZE)\n",
-    "    ship_shape = Shape([ship_points])\n",
+    "        ship_rotation = Rotation(0)\n",
+    "        ship_velocity = Velocity(0, 0, 0)\n",
+    "        ship_health = Health(O_Type.SHIP.HEALTH)\n",
+    "        ship_points = VertexAsset.generate_ship(O_Type.SHIP.SIZE)\n",
+    "        ship_shape = Shape([ship_points])\n",
     "\n",
-    "    component_manager.add_component(ship, ship_game_object)\n",
-    "    component_manager.add_component(ship, ship_input)\n",
-    "    component_manager.add_component(ship, ship_transform)\n",
-    "    component_manager.add_component(ship, ship_position)\n",
-    "    component_manager.add_component(ship, ship_rotation)\n",
-    "    component_manager.add_component(ship, ship_velocity)\n",
-    "    component_manager.add_component(ship, ship_health)\n",
-    "    component_manager.add_component(ship, ship_shape)\n",
+    "        component_manager.add_component(ship, ship_game_object)\n",
+    "        component_manager.add_component(ship, ship_input)\n",
+    "        component_manager.add_component(ship, ship_transform)\n",
+    "        component_manager.add_component(ship, ship_position)\n",
+    "        component_manager.add_component(ship, ship_rotation)\n",
+    "        component_manager.add_component(ship, ship_velocity)\n",
+    "        component_manager.add_component(ship, ship_health)\n",
+    "        component_manager.add_component(ship, ship_shape)\n",
     "\n",
-    "\n",
-    "def spawn_asteroid(component_manager: ComponentManager) -> None:\n",
-    "    \"spawn an asteroid at a random positions\"\n",
-    "    asteroid = Entity(name=\"asteroid\")\n",
-    "    asteroid_game_object = Asteroid()\n",
-    "    angle_degree = random.randint(0, 359)\n",
-    "    rotation_speed = random.randint(\n",
-    "        -ASTEROID_MAX_SPEED_ROTATION, ASTEROID_MAX_SPEED_ROTATION\n",
-    "    )\n",
-    "    asteroid_has_key_frame = HasKeyFrame(KeyFrame(angle_degree, rotation_speed))\n",
-    "    asteroid_transform = Transform()\n",
-    "    asteroid_position = Position(\n",
-    "        Vector2(\n",
-    "            random.randint(0, context.CONFIG.WIDTH),\n",
-    "            random.randint(0, context.CONFIG.HEIGHT),\n",
+    "    @staticmethod\n",
+    "    def spawn_asteroid(component_manager: ComponentManager) -> None:\n",
+    "        \"spawn an asteroid at a random positions\"\n",
+    "        asteroid = Entity(name=\"asteroid\")\n",
+    "        asteroid_game_object = Asteroid()\n",
+    "        angle_degree = random.randint(0, 359)\n",
+    "        rotation_speed = random.randint(\n",
+    "            -O_Type.ASTEROID.K_ROTATION, O_Type.ASTEROID.K_ROTATION\n",
     "        )\n",
-    "    )\n",
-    "    asteroid_rotation = Rotation(random.randint(0, 359))\n",
-    "    asteroid_velocity = Velocity(\n",
-    "        random.randint(-ASTEROID_MAX_SPEED_POSITION, ASTEROID_MAX_SPEED_POSITION),\n",
-    "        random.randint(-ASTEROID_MAX_SPEED_POSITION, ASTEROID_MAX_SPEED_POSITION),\n",
-    "        1,\n",
-    "    )\n",
-    "    asteroid_health = Health(ASTEROID_HEALTH)\n",
-    "    asteroid_points = VertexAsset.generate_asteroid(\n",
-    "        random.randint(int(ASTEROID_SIZE * 0.5), ASTEROID_SIZE), ASTEROID_VERTICES\n",
-    "    )\n",
-    "    asteroid_shape = Shape([asteroid_points])\n",
+    "        asteroid_has_key_frame = HasKeyFrame(KeyFrame(angle_degree, rotation_speed))\n",
+    "        asteroid_transform = Transform()\n",
+    "        asteroid_position = Position(\n",
+    "            Vector2(\n",
+    "                random.randint(0, context.CONFIG.WIDTH),\n",
+    "                random.randint(0, context.CONFIG.HEIGHT),\n",
+    "            )\n",
+    "        )\n",
+    "        asteroid_rotation = Rotation(random.randint(0, 359))\n",
+    "        asteroid_velocity = Velocity(\n",
+    "            random.randint(\n",
+    "                -O_Type.ASTEROID.K_POSITION, O_Type.ASTEROID.K_POSITION\n",
+    "            ),\n",
+    "            random.randint(\n",
+    "                -O_Type.ASTEROID.K_POSITION, O_Type.ASTEROID.K_POSITION\n",
+    "            ),\n",
+    "            1,\n",
+    "        )\n",
+    "        asteroid_health = Health(O_Type.ASTEROID.HEALTH)\n",
+    "        asteroid_points = VertexAsset.generate_asteroid(\n",
+    "            random.randint(int(O_Type.ASTEROID.SIZE * 0.5), O_Type.ASTEROID.SIZE),\n",
+    "            O_Type.ASTEROID.VERTICES,\n",
+    "        )\n",
+    "        asteroid_shape = Shape([asteroid_points])\n",
     "\n",
-    "    component_manager.add_component(asteroid, asteroid_game_object)\n",
-    "    component_manager.add_component(asteroid, asteroid_has_key_frame)\n",
-    "    component_manager.add_component(asteroid, asteroid_transform)\n",
-    "    component_manager.add_component(asteroid, asteroid_position)\n",
-    "    component_manager.add_component(asteroid, asteroid_rotation)\n",
-    "    component_manager.add_component(asteroid, asteroid_velocity)\n",
-    "    component_manager.add_component(asteroid, asteroid_health)\n",
-    "    component_manager.add_component(asteroid, asteroid_shape)\n",
+    "        component_manager.add_component(asteroid, asteroid_game_object)\n",
+    "        component_manager.add_component(asteroid, asteroid_has_key_frame)\n",
+    "        component_manager.add_component(asteroid, asteroid_transform)\n",
+    "        component_manager.add_component(asteroid, asteroid_position)\n",
+    "        component_manager.add_component(asteroid, asteroid_rotation)\n",
+    "        component_manager.add_component(asteroid, asteroid_velocity)\n",
+    "        component_manager.add_component(asteroid, asteroid_health)\n",
+    "        component_manager.add_component(asteroid, asteroid_shape)\n",
     "\n",
-    "\n",
-    "def spawn_asteroids(num_asteroids, component_manager: ComponentManager) -> None:\n",
-    "    \"spawn a number of asteroids at random positions\"\n",
-    "    for i in range(num_asteroids):\n",
-    "        spawn_asteroid(component_manager)\n"
+    "    @staticmethod\n",
+    "    def spawn_asteroids(num_asteroids, component_manager: ComponentManager) -> None:\n",
+    "        \"spawn a number of asteroids at random positions\"\n",
+    "        for i in range(num_asteroids):\n",
+    "            O_Factory.spawn_asteroid(component_manager)\n"
    ]
   },
   {
@@ -909,9 +906,9 @@
     "    # @note 🧠 : Populate entities BEFORE systems, so we can cache entities on\n",
     "    # system inits\n",
     "    # Create ship\n",
-    "    spawn_ship(c_manager)\n",
+    "    O_Factory.spawn_ship(c_manager)\n",
     "    # Create asteroid\n",
-    "    spawn_asteroids(5, c_manager)\n",
+    "    O_Factory.spawn_asteroids(5, c_manager)\n",
     "\n",
     "    # [INIT] - game SYSTEMS\n",
     "    input_system = InputSystem(c_manager, event_manager, [Input, Velocity, Rotation])\n",
