adding debug log on gather to ecs_manager

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -348,7 +348,7 @@
     "    @staticmethod\n",
     "    def spawn_ship(component_manager: ComponentManager) -> None:\n",
     "        \"spawn a ship at the center of the screen\"\n",
-    "        ship = Entity(name=\"ship\")\n",
+    "        ship = Entity(name=f\"ship_{component_manager.entities_count}\")\n",
     "        ship_game_object = Player()\n",
     "        ship_input = Input()\n",
     "        ship_transform = Transform()\n",
@@ -376,7 +376,7 @@
     "    @staticmethod\n",
     "    def spawn_asteroid(component_manager: ComponentManager) -> None:\n",
     "        \"spawn an asteroid at a random positions\"\n",
-    "        asteroid = Entity(name=\"asteroid\")\n",
+    "        asteroid = Entity(name=f\"asteroid_{component_manager.entities_count}\")\n",
     "        asteroid_game_object = Asteroid()\n",
     "        angle_degree = random.randint(0, 359)\n",
     "        rotation_speed = random.randint(\n",
@@ -887,11 +887,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[entities_debug_print]: [1]/[6] with components [3] ['Input', 'Velocity', 'Rotation'] gathered [1] ['ship']\n",
       "[entities] on_init gathering system cache for InputSystem\n",
+      "[entities_debug_print]: [6]/[6] with components [4] ['Shape', 'Position', 'Rotation', 'Velocity'] gathered [6] ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
       "[entities] on_init gathering system cache for PositioningSystem\n",
+      "[entities_debug_print]: [6]/[6] with components [2] ['Shape', 'Rotation'] gathered [6] ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
       "[entities] on_init gathering system cache for RotationalSystem\n",
+      "[entities_debug_print]: [5]/[6] with components [3] ['Asteroid', 'HasKeyFrame', 'Transform'] gathered [5] ['asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
       "[entities] on_init gathering system cache for AnimateAsteroidsSystem\n",
-      "[entities] on_init gathering system cache for ShapeDrawSystem\n"
+      "[entities_debug_print]: [6]/[6] with components [2] ['Shape', 'Position'] gathered [6] ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
+      "[entities] on_init gathering system cache for ShapeDrawSystem\n",
+      "[entities_debug_print]: [1]/[6] with components [3] ['Shape', 'Input', 'Rotation'] gathered [1] ['ship']\n"
      ]
     }
    ],
