clear changes by saving

--- a/pygames/asteroids/asteroids.ipynb
+++ b/pygames/asteroids/asteroids.ipynb
@@ -469,6 +469,31 @@
     "- `Only use global variables` when you have a good reason to do so, such as when  \n",
     "dealing with `truly global state or constants`."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To indent a block of Python code in Visual Studio Code (VSCode)\n",
+    "***\n",
+    "\n",
+    "1. Select the lines of code you want to indent. You can click and drag your  \n",
+    "mouse or hold down the `Shift` key while using the arrow keys to select the lines.\n",
+    "\n",
+    "2. Once the lines are selected, press the `Tab` key to indent the code to the  \n",
+    "right by one level. \n",
+    "\n",
+    "   * If you want to indent by a specific number of spaces, you can configure  \n",
+    "   that in the settings. Go to `File > Preferences > Settings`, search for  \n",
+    "   \"Tab Size\" in the search bar, and set the desired number of spaces for  \n",
+    "   \"Editor: Tab Size\".\n",
+    "\n",
+    "3. If you need to un-indent (move the code to the left), select the lines of  \n",
+    "code and press `Shift` + `Tab`.\n",
+    "\n",
+    "These steps should help you quickly and easily indent your Python code in VSCode."
+   ]
   }
  ],
  "metadata": {
