--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -25,6 +25,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:PRODUCTION=1\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -38,6 +45,17 @@
     "from pygame.event import Event\n",
     "from pygame.math import Vector2\n",
     "from typing import Tuple, List, Callable, Optional, Type\n",
+    "import logging\n",
+    "log_level = logging.DEBUG\n",
+    "logging.basicConfig(level=log_level)\n",
+    "\n",
+    "# check environment variables\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv() # This loads the environment variables from the .env file\n",
+    "# Now you can access the environment variables using os.getenv('variable_name')\n",
+    "production = os.getenv('PRODUCTION')\n",
+    "logging.debug(f'PRODUCTION={production}')\n",
     "\n",
     "# imports context from library.system_context module\n",
     "from library.pygame_system_context import PygameSystemContext as context"
@@ -1002,6 +1020,84 @@
    "source": [
     "#### -- [FOOTNOTES] --\n",
     "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting python-dotenv\n",
+      "  Downloading python_dotenv-1.0.0-py3-none-any.whl (19 kB)\n",
+      "Installing collected packages: python-dotenv\n",
+      "Successfully installed python-dotenv-1.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install python-dotenv"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set env variable for python\n",
+    "***\n",
+    "In Visual Studio Code (VSCode) with Jupyter notebooks, you can set an environment  \n",
+    "variable for your Python kernel by creating a `.env` file in the same directory  \n",
+    "as your Jupyter notebook file.\n",
+    "\n",
+    "Here's how to do it:\n",
+    "\n",
+    "1. In the same directory as your Jupyter notebook file, create a new file named  \n",
+    "`.env`.\n",
+    "\n",
+    "2. Open the `.env` file and add your environment variables in the format  \n",
+    "`KEY=VALUE`. For example, to set the `PRODUCTION` environment variable, add the  \n",
+    "following line:\n",
+    "\n",
+    "```\n",
+    "PRODUCTION=1\n",
+    "```\n",
+    "\n",
+    "3. Save the `.env` file.\n",
+    "\n",
+    "4. Install the Python `python-dotenv` package if you haven't already. This  \n",
+    "package allows you to easily load environment variables from `.env` files. You  \n",
+    "can install it using pip:\n",
+    "\n",
+    "```bash\n",
+    "pip install python-dotenv\n",
+    "```\n",
+    "\n",
+    "5. In your Jupyter notebook, you can now load the environment variables from the  \n",
+    "`.env` file using the following code:\n",
+    "\n",
+    "```python\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()  # This loads the environment variables from the .env file\n",
+    "\n",
+    "# Now you can access the environment variable using os.environ\n",
+    "production = os.environ.get(\"PRODUCTION\")\n",
+    "print(production)\n",
+    "```\n",
+    "\n",
+    "After following these steps, the environment variable `PRODUCTION` will be  \n",
+    "available in your Jupyter notebook running in VSCode.\n",
+    "\n",
+    "Please note that you'll need to restart the Python kernel in your Jupyter  \n",
+    "notebook after creating or modifying the `.env` file to apply the changes.  \n",
+    "You can do this by clicking the \"Restart\" button (circular arrow) in the  \n",
+    "notebook toolbar."
    ]
   },
   {
