config.ini and environment_flag + unit test

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -25,13 +25,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:root:PRODUCTION=1\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -45,20 +38,9 @@
     "from pygame.event import Event\n",
     "from pygame.math import Vector2\n",
     "from typing import Tuple, List, Callable, Optional, Type\n",
-    "import logging\n",
-    "log_level = logging.DEBUG\n",
-    "logging.basicConfig(level=log_level)\n",
-    "\n",
-    "# check environment variables\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv() # This loads the environment variables from the .env file\n",
-    "# Now you can access the environment variables using os.getenv('variable_name')\n",
-    "production = os.getenv('PRODUCTION')\n",
-    "logging.debug(f'PRODUCTION={production}')\n",
     "\n",
     "# imports context from library.system_context module\n",
-    "from library.pygame_system_context import PygameSystemContext as context"
+    "from library.pygame_system_context import PygameSystemContext as context\n"
    ]
   },
   {
@@ -1024,17 +1006,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting python-dotenv\n",
-      "  Downloading python_dotenv-1.0.0-py3-none-any.whl (19 kB)\n",
-      "Installing collected packages: python-dotenv\n",
-      "Successfully installed python-dotenv-1.0.0\n",
+      "Requirement already satisfied: python-dotenv in /Users/mton/miniconda3/envs/torch-gpu/lib/python3.9/site-packages (1.0.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -1102,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
