asteroid_ecs is_production from config.ini load

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -880,13 +880,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "IS_PRODUCTION_BUILD: False\n",
+      "IS_MAC_BUILD: True\n",
       "[entities_debug_print]: [1]/[6] with components [3] ['Input', 'Velocity', 'Rotation'] gathered [1] ['ship']\n",
       "[entities] on_init gathering system cache for InputSystem\n",
       "[entities_debug_print]: [6]/[6] with components [4] ['Shape', 'Position', 'Rotation', 'Velocity'] gathered [6] ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
