--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.3.0 (SDL 2.24.2, Python 3.9.13)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "from pygame.event import Event\n",
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -880,17 +889,29 @@
      "text": [
       "IS_PRODUCTION_BUILD: False\n",
       "IS_MAC_BUILD: True\n",
-      "[entities_debug_print]: [1]/[6] with components [3] ['Input', 'Velocity', 'Rotation'] gathered [1] ['ship']\n",
+      "[entities_debug] : [1]/[6]\n",
+      "-- [3] : ['Input', 'Velocity', 'Rotation']\n",
+      "-- [1] : ['ship']\n",
       "[entities] on_init gathering system cache for InputSystem\n",
-      "[entities_debug_print]: [6]/[6] with components [4] ['Shape', 'Position', 'Rotation', 'Velocity'] gathered [6] ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
+      "[entities_debug] : [6]/[6]\n",
+      "-- [4] : ['Shape', 'Position', 'Rotation', 'Velocity']\n",
+      "-- [6] : ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
       "[entities] on_init gathering system cache for PositioningSystem\n",
-      "[entities_debug_print]: [6]/[6] with components [2] ['Shape', 'Rotation'] gathered [6] ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
+      "[entities_debug] : [6]/[6]\n",
+      "-- [2] : ['Shape', 'Rotation']\n",
+      "-- [6] : ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
       "[entities] on_init gathering system cache for RotationalSystem\n",
-      "[entities_debug_print]: [5]/[6] with components [3] ['Asteroid', 'HasKeyFrame', 'Transform'] gathered [5] ['asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
+      "[entities_debug] : [5]/[6]\n",
+      "-- [3] : ['Asteroid', 'HasKeyFrame', 'Transform']\n",
+      "-- [5] : ['asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
       "[entities] on_init gathering system cache for AnimateAsteroidsSystem\n",
-      "[entities_debug_print]: [6]/[6] with components [2] ['Shape', 'Position'] gathered [6] ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
+      "[entities_debug] : [6]/[6]\n",
+      "-- [2] : ['Shape', 'Position']\n",
+      "-- [6] : ['ship', 'asteroid', 'asteroid', 'asteroid', 'asteroid', 'asteroid']\n",
       "[entities] on_init gathering system cache for ShapeDrawSystem\n",
-      "[entities_debug_print]: [1]/[6] with components [3] ['Shape', 'Input', 'Rotation'] gathered [1] ['ship']\n"
+      "[entities_debug] : [1]/[6]\n",
+      "-- [3] : ['Shape', 'Input', 'Rotation']\n",
+      "-- [1] : ['ship']\n"
      ]
     }
    ],
@@ -999,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
